--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-express-gql-ts",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Set up and build a Node.js GraphQL API using Typescript, Express, Mongoose with a maintainable and scalable structure.",
   "main": "src/index.ts",
   "bin": "src/bin/index.js",
@@ -8,14 +8,14 @@
     "start": "cross-env NODE_ENV=production node build/index.js",
     "start:pm2": "pm2-runtime start ecosystem.config.js --env production",
     "build": "tsc -p prod.tsconfig.json && tsc-alias",
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "dev:sync": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts --trace-sync-io",
+    "dev": "ts-node-dev --cls -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
+    "dev:sync": "ts-node-dev --cls -r tsconfig-paths/register --respawn --transpile-only src/index.ts --trace-sync-io",
     "dev:pm2": "pm2 start ecosystem.config.js",
     "seed:admin": "ts-node -r tsconfig-paths/register src/seeders/seedAdmin.ts",
     "seed:users": "ts-node -r tsconfig-paths/register src/seeders/seedUsers.ts",
     "entity": "ts-node src/tasks/generateEntity.ts",
     "lint": "eslint .",
-    "lint:fix": "yarn lint --fix",
+    "lint:fix": "eslint --fix",
     "test": "jest",
     "test:good": "jest src/__tests__/good.test.ts",
     "test:unit": "jest unit",
@@ -102,9 +102,15 @@
     "supertest": "^6.2.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.6.0",
+    "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.6.5",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.2"
+  },
+  "overrides": {
+    "commitizen": {
+      "minimist": "1.2.6"
+    }
   },
   "repository": {
     "type": "git",
