--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn
+        run: yarn install
       - name: ESlint
         run: yarn lint
 
@@ -42,7 +42,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn
+        run: yarn install
       - name: Run tests with Jest
         run: yarn test
         env:
@@ -66,6 +66,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn
+        run: yarn install
       - name: Build with TypeScript
         run: yarn build
